// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select: Component should render correctly 1`] = `
<div
  style={
    Object {
      "color": "#FFF",
      "display": "flex",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "cursor": "pointer",
        "display": "flex",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "display": "flex",
          "height": "30px",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "cursor": "pointer",
            "display": "flex",
            "height": "30px",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "display": "none",
          "flexDirection": "column",
          "left": "0",
          "maxHeight": "175px",
          "overflow": "hidden",
          "position": "absolute",
          "top": "37px",
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <div
        id="select-item-0"
        key="0"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "alignItems": "center",
            "border": "1px solid  #2F2F36",
            "borderTop": "1px solid  #2F2F36",
            "color": "#71737e",
            "cursor": "pointer",
            "display": "flex",
            "minHeight": "60px",
            "padding": "0 10px",
          }
        }
      >
        Dolphin
      </div>
      <div
        id="select-item-1"
        key="1"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "alignItems": "center",
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "display": "flex",
            "minHeight": "60px",
            "padding": "0 10px",
          }
        }
      >
        Dog
      </div>
      <div
        id="select-item-2"
        key="2"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "alignItems": "center",
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "display": "flex",
            "minHeight": "60px",
            "padding": "0 10px",
          }
        }
      >
        Parrot
      </div>
      <div
        id="select-item-3"
        key="3"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "alignItems": "center",
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "display": "flex",
            "minHeight": "60px",
            "padding": "0 10px",
          }
        }
      >
        Cat
      </div>
      <div
        id="select-item-4"
        key="4"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "alignItems": "center",
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "display": "flex",
            "minHeight": "60px",
            "padding": "0 10px",
          }
        }
      >
        Alligator
      </div>
      <div
        id="select-item-5"
        key="5"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "alignItems": "center",
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "display": "flex",
            "minHeight": "60px",
            "padding": "0 10px",
          }
        }
      >
        Spider
      </div>
    </div>
  </div>
</div>
`;

exports[`Select: Component should render correctly with native 1`] = `
<div
  style={
    Object {
      "color": "#FFF",
      "display": "flex",
      "width": "100%",
    }
  }
>
  <select
    onChange={[Function]}
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <option
      key="0"
      value="dolphin"
    >
      Dolphin
    </option>
    <option
      key="1"
      value="dog"
    >
      Dog
    </option>
    <option
      key="2"
      value="parrot"
    >
      Parrot
    </option>
    <option
      key="3"
      value="cat"
    >
      Cat
    </option>
    <option
      key="4"
      value="alligator"
    >
      Alligator
    </option>
    <option
      key="5"
      value="spider"
    >
      Spider
    </option>
  </select>
</div>
`;

exports[`Select: Component should render correctly with placeholder 1`] = `
<div
  style={
    Object {
      "color": "#FFF",
      "display": "flex",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "cursor": "pointer",
        "display": "flex",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "display": "flex",
          "height": "30px",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "cursor": "pointer",
            "display": "flex",
            "height": "30px",
          }
        }
      >
        Select one
      </div>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "display": "none",
          "flexDirection": "column",
          "left": "0",
          "maxHeight": "175px",
          "overflow": "hidden",
          "position": "absolute",
          "top": "37px",
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <div
        id="select-item-0"
        key="0"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "alignItems": "center",
            "border": "1px solid  #2F2F36",
            "borderTop": "1px solid  #2F2F36",
            "color": "#71737e",
            "cursor": "pointer",
            "display": "flex",
            "minHeight": "60px",
            "padding": "0 10px",
          }
        }
      >
        Dolphin
      </div>
      <div
        id="select-item-1"
        key="1"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "alignItems": "center",
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "display": "flex",
            "minHeight": "60px",
            "padding": "0 10px",
          }
        }
      >
        Dog
      </div>
      <div
        id="select-item-2"
        key="2"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "alignItems": "center",
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "display": "flex",
            "minHeight": "60px",
            "padding": "0 10px",
          }
        }
      >
        Parrot
      </div>
      <div
        id="select-item-3"
        key="3"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "alignItems": "center",
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "display": "flex",
            "minHeight": "60px",
            "padding": "0 10px",
          }
        }
      >
        Cat
      </div>
      <div
        id="select-item-4"
        key="4"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "alignItems": "center",
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "display": "flex",
            "minHeight": "60px",
            "padding": "0 10px",
          }
        }
      >
        Alligator
      </div>
      <div
        id="select-item-5"
        key="5"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "alignItems": "center",
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "display": "flex",
            "minHeight": "60px",
            "padding": "0 10px",
          }
        }
      >
        Spider
      </div>
    </div>
  </div>
</div>
`;
